[tool.poetry]
name = "recrutation-openx"
version = "0.1.0"
description = ""
authors = ["Monika <mstopins@student.agh.edu.pl>"]

[tool.poetry.dependencies]
python = "^3.10"
Cerberus = "^1.3.4"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
